--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alabaster==0.7.12
 Babel==2.9.1
+beautifulsoup4==4.10.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.0.4
@@ -35,6 +36,7 @@ scipy==1.8.0
 segtok==1.5.11
 six==1.16.0
 snowballstemmer==2.2.0
+soupsieve==2.3.1
 Sphinx==4.4.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
